--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,11 @@
     text-wrap: balance;
   }
 }
+@layer components{
+  .box-center{
+    @apply flex justify-center items-center;
+  }
+}
 *{
   font-family: 'Rajdhani', sans-serif;
   margin: 0;
@@ -36,11 +41,33 @@
   
 }
 
-/* @font-face {
-  font-family: 'Paladins';
-  src: url('/fonts/paladins.ttf');
-} */
-
+.clip-box{
+  clip-path: polygon(0 0, 90% 0, 100% 15%, 100% 80%, 100% 100%, 10% 100%, 0 85%, 0% 20%);
+}
+.clip-box-inverse{
+  clip-path: polygon(0 0, 90% 0, 100% 15%, 100% 80%, 100% 100%, 10% 100%, 0 85%, 0% 20%);
+}
+.clip-top{
+  clip-path: polygon(10% 0, 90% 0, 100% 5%, 100% 100%, 80% 100%, 20% 100%, 0 100%, 0 5%);
+}
+.gradient-top-div::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 24px;
+  background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+}
+.gradient-top-div::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom right, #222 49%, transparent 50%);
+}
 
 @font-face {
   font-family: 'coolvetica';
