--- a/app/globals.css
+++ b/app/globals.css
@@ -50,6 +50,9 @@
 .clip-top{
   clip-path: polygon(10% 0, 90% 0, 100% 5%, 100% 100%, 80% 100%, 20% 100%, 0 100%, 0 5%);
 }
+.clip-b-r{
+  clip-path: polygon(0 0, 100% 0, 100% 50%, 75% 100%, 0 100%, 0% 50%);
+}
 .gradient-top-div::before {
   content: '';
   position: absolute;
